# SimpleERP

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  basicmanager.cpp  basicmanager.h  division.cpp  division.h  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  stateful.cpp  stateful.h  tmanager.cpp  tmanager.h
src/base/: CMakeLists.txt  basicmanager.cpp  basicmanager.h  division.cpp  division.h  employee.cpp  employee.h  stateful.cpp  stateful.h
src/gui/: CMakeLists.txt  companytree.cpp  companytree.h  divisionform.cpp  divisionform.h  elem.h  employeeform.cpp  employeeform.h  form.h  treeview.cpp  treeview.h  update_types.def  updatehandler.h  windowview.cpp  windowview.h
