set(Boost_USE_STATIC_LIBS ON)
find_package(Boost 1.78 COMPONENTS serialization REQUIRED)
link_directories(${PROJECT_SOURCE_DIR}/Boost/lib)
add_library(Employee STATIC "employee.cpp" "employee.h")
add_library(Division STATIC "division.cpp" "division.h")
add_library(Manager STATIC "manager.cpp" "manager.h")
include_directories(${Boost_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/src)
add_executable(Main "main.cpp")
target_link_libraries(Main PUBLIC Employee Division Manager Boost::serialization)
